--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--Table -->
     <div id="liveAlertPlaceholder"></div>
     <div class="box">
-        <table class="table table-striped  bg-transparent" data-bs-theme="dark">
+        <table class="table" data-bs-theme="dark">
             <thead>
                 <tr>
                     <th scope="col">Product Number</th>
@@ -80,7 +80,7 @@
             </tbody>
         </table>
     </div>
-
+    <!--Create Modal-->
     <div class="modal fade " id="createModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="mod_title2" aria-hidden="true">
         <div class="modal-dialog">
@@ -167,7 +167,7 @@
         </div>
     </div>
 
-
+<!--Edit Modal-->
     <div>
         <div class="modal fade" id="editModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="mod_title" aria-hidden="true">
@@ -256,6 +256,9 @@
         </div>
     </div>
     <script src="assets/js/index.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     
 </body>
 
