--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
         </table>
     </div>
     <!--Create Modal-->
-    <div class="modal fade " id="createModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    <div class="modal fade" id="createModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="mod_title2" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+                <h1 class="modal-title fs-5" id="mod_title2">Bits and Bytes</h1>
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="mod_title2">Create</h1>
+                    <h3 class="modal-title fs-5" id="mod_title2">Add Product</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form name="createForm" id="createForm" action="get" class="was-validated">
@@ -100,7 +101,7 @@
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Oh! Thats certainly error
+                                Error! Specify-type 
                             </div>
                         </div>
 
@@ -113,7 +114,7 @@
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Oh! Thats certainly error
+                                Should select a value
                             </div>
                         </div>
                         <div class="form-floating  mb-2">
@@ -131,14 +132,14 @@
 
                         <div class="form-floating  mb-2">
 
-                            <input type="text" class="form-control" placeholder="Ex: 14 inch" aria-label="Username"
+                            <input type="" class="form-control" placeholder="Ex: 14 inch" aria-label="Username"
                                 aria-describedby="footer-form" id='c_mon_size' required>
                             <label>Monitor Size</label>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Oh! Thats certainly error
+                                Follow format! for "Example: 12 inches"
                             </div>
                         </div>
                         <div class="form-floating  mb-2">
@@ -150,7 +151,7 @@
                                 Looks good!
                             </div>
                             <div class="invalid-feedback">
-                                Oh! Thats certainly error
+                                Format : $3000
                             </div>
                         </div>
 
@@ -167,14 +168,15 @@
         </div>
     </div>
 
-<!--Edit Modal-->
+    <!--Edit Modal-->
     <div>
         <div class="modal fade" id="editModel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="mod_title" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+                    <h1 class="modal-title fs-5" id="mod_title2">Bits and Bytes</h1>
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="mod_title">Edit</h1>
+                        <h3 class="modal-title fs-5" id="mod_title">Edit Product</h3> 
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <form name="editForm" id="editForm" action="get" class="was-validated">
@@ -182,14 +184,21 @@
                             <input type="text" id="pro_id" hidden="true">
                             <div class="form-floating  mb-2">
 
-                                <input type="text" class="form-control" placeholder="Specify Type" aria-label="Username"
-                                    id='ctype' name="ctype" required minlength="5" maxlength="12">
-                                <label>Computer Type</label>
+                                <input list="computerType" class="form-control" placeholder="Specify Type"
+                                    aria-label="Username" id='ctype' name="ctype" required minlength="5" maxlength="12">
+                                <label for="ctype">Computer Type</label>
+                                <datalist id="computerType">
+                                    <option value="Gaming PC">
+                                    <option value="Desktop">
+                                    <option value="Laptop">
+                                    <option value="Gaming Laptop">
+                                    <option value="Home Theatre PC">
+                                </datalist>
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
                                 <div class="invalid-feedback">
-                                    Oh! Thats certainly error
+                                    Please enter some data!
                                 </div>
                             </div>
 
@@ -197,6 +206,16 @@
 
                                 <input type="text" class="form-control" placeholder="Processor" aria-label="Username"
                                     id='processor' name="processor" required>
+                                    <select id="selectPro" onclick="processor.value=selectPro.value">
+                                        <option value="Intel Core i3">Intel Core i3</option>
+                                        <option value="Intel Core i5">Intel Core i5</option>
+                                        <option value="Intel Core i7">Intel Core i7</option>
+                                        <option value="AMD Ryzen 3">AMD Ryzen 3</option>
+                                        <option value="AMD Ryzen 5">AMD Ryzen 5</option>
+                                        <option value="AMD Ryzen 7">AMD Ryzen 7</option>
+                                        <option value="AMD A4">AMD A4/option>
+                                        <option value="Intel Celereon">Intel Celereon</option>
+                                    </select>
                                 <label>Processor</label>
                                 <div class="valid-feedback">
                                     Looks good!
@@ -209,7 +228,13 @@
 
                                 <input type="text" class="form-control" placeholder="ex 2gb 4gb" aria-label="Username"
                                     aria-describedby="footer-form" id='ram' name="ram" required>
-                                <label>RAM</label>
+                                <select id="selectRam" onclick="ram.value=selectRam.value">
+                                    <option value="4 GB">4 GB</option>
+                                    <option value="8 GB">8 GB</option>
+                                    <option value="16 GB">16 GB</option>
+                                    <option value="32 GB">32 GB</option>
+                                </select>
+                                <label for='ram'>RAM</label>
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div>
@@ -259,7 +284,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    
+
 </body>
 
 </html>
