--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <th scope="col">Monitor Size</th>
                     <th scope="col">Price</th>
                     <th scope="col">Computer Image</th>
-                    <th></th>
-                    <th></th>
+                    <th>Edit</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody id="tabledata">
